# omni-BASE

./: .bazelrc.ios  .gitignore  BUILD_STATUS.md  CHANGELOG.md  DEPENDENCIES.md  DEPENDENCY_QUICK_REFERENCE.md  DEPENDENCY_SETUP_SUMMARY.md  FEATURE_COMPARISON.md  MODULE.bazel  PHASE_1_IMPLEMENTATION_SUMMARY.md  README.md  WORKSPACE  generate_icons.py  package.json  vercel.json
apps/omnitak/: CONNECTING_TO_TAK_SERVER.md  DEPLOYMENT.md  README.md  TLS_LEGACY_SUPPORT.md  bundled-client.p12
apps/omnitak/OmniTAKMobile/: ATAKLoadingScreen.swift  CHAT_FEATURE_README.md  MapViewController.swift  QuickActionToolbar.swift  ServerManager.swift  TAKService.swift
apps/omnitak/OmniTAKMobile.xcodeproj/: project.pbxproj
apps/omnitak/OmniTAKMobile.xcodeproj/xcshareddata/xcschemes/: OmniTAKMobileUITests.xcscheme
apps/omnitak/OmniTAKMobile/Assets.xcassets/AccentColor.colorset/: Contents.json
apps/omnitak/OmniTAKMobile/CoT/: CoTEventHandler.swift  CoTMessageParser.swift
apps/omnitak/OmniTAKMobile/CoT/Generators/: ChatCoTGenerator.swift  MarkerCoTGenerator.swift
apps/omnitak/OmniTAKMobile/CoT/Parsers/: ChatXMLGenerator.swift  ChatXMLParser.swift
apps/omnitak/OmniTAKMobile/Core/App/: ContentView.swift  OmniTAKMobileApp.swift
apps/omnitak/OmniTAKMobile/Features/ADSB/Models/: ADSBModels.swift
apps/omnitak/OmniTAKMobile/Features/ADSB/Services/: ADSBTrafficService.swift
apps/omnitak/OmniTAKMobile/Features/ADSB/Views/: ADSBTrafficView.swift
apps/omnitak/OmniTAKMobile/Features/Authentication/Views/: ServerConfigurationView.swift
apps/omnitak/OmniTAKMobile/Features/Chat/Managers/: ChatManager.swift
apps/omnitak/OmniTAKMobile/Features/Chat/Models/: ChatModels.swift
apps/omnitak/OmniTAKMobile/Features/Chat/Services/: ChatService.swift
apps/omnitak/OmniTAKMobile/Features/CoT/Services/: CoTDataSyncService.swift
apps/omnitak/OmniTAKMobile/Features/DataPackages/Services/: DataPackageImportManager.swift
apps/omnitak/OmniTAKMobile/Map/Controllers/: MapViewController.swift
apps/omnitak/OmniTAKMobile/Resources/: Info.plist
apps/omnitak/OmniTAKMobile/Shared/Resources/: cot_types.yaml
apps/omnitak/OmniTAKMobile/Shared/Services/: MilStdIconService.swift  PluginSettingsManager.swift
apps/omnitak/OmniTAKMobile/Views/: ATAKLoadingScreen.swift  CertificateEnrollmentView.swift  NetworkPreferencesView.swift  TAKServersView.swift
apps/omnitak/OmniTAKMobileUITests/: AppPreviewRecordingTests.swift  AppStoreScreenshotTests.swift  ScreenshotTestCase.swift
apps/omnitak_android/app_assets/android/values/: colors.xml
apps/omnitak_ios_test/OmniTAKTest/: ATAKBottomToolbar_Modified.swift  ATAKLoadingScreen.swift  ATAKToolsView.swift  ChatManager.swift  ChatModels.swift  ChatView.swift  ChatXMLGenerator.swift  ChatXMLParser.swift  CoTUnitListView.swift  ConversationView.swift  DrawingModels.swift  DrawingPersistence.swift  DrawingPropertiesView.swift  DrawingToolsManager.swift  DrawingToolsPanel.swift  EnhancedCoTMarker.swift  MapViewController.swift  NavigationDrawer.swift  OfflineMapManager.swift  OfflineMapsView.swift  ServerManager.swift  TAKService.swift
apps/omnitak_ios_test/OmniTAKTest.xcodeproj/: project.pbxproj
apps/omnitak_mobile_ios/: BUILD.bazel  IOS_BUILD_GUIDE.md  README.md  SETUP_SUMMARY.md
apps/omnitak_mobile_ios/app_assets/ios/: Info.plist  LaunchScreen.storyboard
apps/omnitak_mobile_ios/src/ios/: AppDelegate.swift  ViewController.swift
apps/omnitak_mobile_ios/tests/ios/: OmniTAKTests.swift
bzl/: omnitak_dependencies.bzl
certs/: ca.pem
crates/omnitak-cert/: Cargo.toml
crates/omnitak-cert/src/: enrollment.rs  lib.rs
crates/omnitak-mobile/src/: enrollment_ffi.rs  lib.rs
crates/omnitak-server/: Cargo.toml
crates/omnitak-server/certs/: ca-cert.pem  ca-key.pem  client-cert.pem  client-key.pem  server-cert.pem  server-key.pem
crates/omnitak-server/examples/: tls_client.rs  tls_server.rs
crates/omnitak-server/scripts/: generate_certs.sh
crates/omnitak-server/src/: client.rs  lib.rs  server.rs  tls.rs
docs/: INSTALL.md  LOCAL_DEVELOPMENT_SETUP.md  PLUGIN_DEVELOPMENT_GUIDE.md
docs/codelabs/: how_to_get_help.md
docs/docs/: help-support.md  start-install.md
modules/omnitak_mobile/: ARCHITECTURE_DIAGRAM.md  BAZEL_BUILD_SUMMARY.md  BAZEL_QUICK_REFERENCE.md  BAZEL_SETUP_COMPLETE.md  BUILD.bazel  BUILD_CHECKLIST.md  BUILD_CONFIGURATION.md  BUILD_GUIDE.md  BUILD_STATUS_REPORT.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  INTEGRATION.md  MAPLIBRE_IMPLEMENTATION_SUMMARY.md  MARKER_SYSTEM_README.md  POLYGLOT_IMPLEMENTATION_SUMMARY.md  QUICK_BUILD.md  QUICK_START.md  README.md  TROUBLESHOOTING.md  build.sh
modules/omnitak_mobile/android/: AndroidManifest.xml  INTEGRATION_GUIDE.md  README.md  build.gradle  proguard-rules.pro
modules/omnitak_mobile/android/maplibre/: MapLibreMapView.kt  MapLibreMapViewAttributesBinder.kt
modules/omnitak_mobile/android/native/: CMakeLists.txt  OmniTAKNativeBridge.kt  README.md  omnitak_jni.cpp
modules/omnitak_mobile/ios/maplibre/: EXAMPLES.md  IMPLEMENTATION_SUMMARY.md  INTEGRATION.md  QUICK_REFERENCE.md  README.md  SCMapLibreMapView.h  SCMapLibreMapView.m
modules/omnitak_mobile/ios/native/: BUILD.bazel  OmniTAKNativeBridge.swift  README.md
modules/omnitak_mobile/src/: index.ts
modules/omnitak_mobile/src/valdi/omnitak/: App.tsx
npm_modules/cli/src/commands/: doctor.ts
plugin-template/: README.md
scripts/: build_ios.sh  build_omnitak_mobile.sh  check_dependencies.sh  clean_build.sh  clean_build_omnitak_mobile.sh  run_ios_simulator.sh  setup_dependencies.sh  test_ios.sh  validate_build_config.sh  verify_dependencies.sh
website/: .env.example  DEPLOYMENT.md  README.md  package.json  tailwind.config.ts  vercel.json
website/app/: globals.css  layout.tsx  page.tsx
website/app/api/changelog/: route.ts
website/components/: AnimatedText.tsx  AppShowcase.tsx  Capabilities.tsx  Changelog.tsx  Deployments.tsx  Download.tsx  FeatureCard.tsx  Features.tsx  FloatingParticles.tsx  Footer.tsx  GlassCard.tsx  GridBackground.tsx  Hero.tsx  Navigation.tsx  TechStack.tsx  UseCases.tsx
(+87 files in other folders)
